testsuite/negative/unbound-type.n
class C {
  x : print_gutenberg;    // E: unbound type name `print_gutenberg'

  gaa (_ : string[]) : void { }  // E: string\[\] is not a valid type, use just string
}
